[AB-0000]: Added concurrency and fixed UTs.